[project]
name = "doduo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.9"
dependencies = [
    "numpy==1.20.2",
    "pandas==1.2.4",
    "scikit-learn==0.24.1",
    "scipy==1.6.2",
    "torch==1.8.1",
    "transformers==4.5.1",
    "packaging==21.3",
    "tabulate"
]
